--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,15 +12,39 @@
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
 
-<!--  <filter>-->
-<!--    <filter-name>characterEncodingFilter</filter-name>-->
-<!--    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>-->
-<!--    <init-param>-->
-<!--      <param-name>encoding</param-name>-->
-<!--      <param-value>UTF-8</param-value>-->
-<!--    </init-param>-->
-<!--    -->
-<!--  </filter>-->
+  <!-- 字符过滤器 -->
+
+    <filter>
+
+      <filter-name>encodingFilter</filter-name>
+
+      <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+
+      <init-param><!-- 针对request -->
+
+        <param-name>encoding</param-name>
+
+        <param-value>UTF-8</param-value>
+
+      </init-param>
+
+      <init-param><!-- 针对response -->
+
+        <param-name>forceEncoding</param-name>
+
+        <param-value>true</param-value>
+
+      </init-param>
+
+    </filter>
+
+    <filter-mapping>
+
+      <filter-name>encodingFilter</filter-name>
+
+      <url-pattern>/*</url-pattern>
+
+    </filter-mapping>
 
   <!--  1. 配置前端控制器-->
 
@@ -28,6 +52,8 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
+
 
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
